src/parser/snapshots/texlab__parser__latex__tests__parse@color__color_reference_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/color/color_reference_simple.txt
---
ROOT@0..13
  PREAMBLE@0..13
    COLOR_REFERENCE@0..13
      COMMAND_NAME@0..6 "\\color"
      CURLY_GROUP_WORD@6..13
        L_CURLY@6..7 "{"
        KEY@7..12
          WORD@7..12 "black"
        R_CURLY@12..13 "}"

